test/Vehicle/Test/CompileMode/Error/ParsingErrors/unchainableOrdersEqualsEquals.vcl
test : Bool
test = 1 <= 2 >= 3